<resources>
    <string name="servicePackageId" translatable="false">com.eyeverify.eyeprintid</string>
    <string name="app_name" translatable="false">Eyeprint ID</string>
    <string name="button_title_cancel">Cancel</string>
    <string name="button_title_continue">Continue</string>
    <string name="button_title_keep_scanning">Keep Scanning</string>
    <string name="button_title_start">Start</string>
    <string name="button_title_scan_again">Scan Again</string>
    <string name="small_notification_while_open" translatable="false">Small Notification while closed</string>
    <string name="large_notification_or_error" translatable="false">Large Notification or Error</string>
    <string name="countdown_number" translatable="false">6</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="get_started">Get Started</string>
    <string name="welcome_title">Welcome</string>
    <string name="capture_license_limited_suggestion">We’re sorry but your license key has reached its limit for users, please contact sales@eyeverify.com for a quick re-up</string>
    <string name="capture_license_expired_suggestion">We’re sorry but your license key has passed its expiration date, please contact sales@eyeverify.com to renew</string>
    <string name="capture_license_invalid_suggestion">It looks like the license key that you are using is not found, please try again or contact sales@eyeverify.com for assistance</string>
    <string name="compliance_incompatible_heading">Device Not Supported</string>
    <string name="compliance_incompatible_message">We’re sorry, EyeVerify does not currently support this device.  This model has been added to our device compatibility queue.  Please check back again soon.</string>
    <string name="compliance_incompatible_view_devices">View Devices</string>
    <string name="capture_enrollment_new_session">Good job.</string>
    <string name="capture_enrollment_new_session_almost_done">Almost done.</string>
    <string name="capture_noeye_error">We are not seeing your eyes</string>
    <string name="capture_suggestion_no_eye">If you are wearing glasses, please remove them</string>
    <string name="capture_error_quality">Keep Scanning</string>
    <string name="capture_suggestion_quality">For best results, hold still during scan</string>
    <string name="capture_error_not_supported">EyeVerify does not currently support this device</string>
    <string name="capture_suggestion_not_supported">This model has been added to our device compatibility queue. Please check back again soon.</string>
    <string name="capture_error_not_enrolled">Please keep still while scanning</string>
    <string name="capture_suggestion_wipe_camera">Try wiping the camera lens to remove any smudges</string>
    <string name="capture_error_distance">We don’t have the distance right</string>
    <string name="capture_suggestion_distance">Move the device closer so your eyes fill the screen</string>
    <string name="capture_error_system">System error</string>
    <string name="capture_suggestion_system">If the problem persists, report the error to the technical support</string>
    <string name="capture_error_internet">Unable to access the internet</string>
    <string name="capture_suggestion_internet">Please ensure that this device has access to the network</string>
    <string name="capture_error_enrollment_match">Keep scanning</string>
    <string name="capture_suggestion_enrollment_match">When creating your first Eyeprint, good lighting helps</string>
    <string name="capture_error_chaff">Server data not found</string>
    <string name="capture_suggestion_chaff">If the problem persists, please re-enroll</string>
    <string name="capture_error_background">Scan not completed</string>
    <string name="capture_suggestion_background">Click Retry to scan again</string>
    <string name="capture_error_low_lighting">The lighting is insufficient for the current operation</string>
    <string name="capture_suggestion_low_lighting">We need you to move to a more well lit area and press the keep scanning button.</string>
    <string name="capture_error_not_verified">Not Verified</string>
    <string name="capture_suggestion_enrollment_new_session">Keep scanning to create your Eyeprint.</string>
    <string name="capture_message_align">Position your eyes in the window</string>
    <string name="capture_message_distance">Move device closer</string>
    <string name="enroll_completed_message">Great, we got it.</string>
    <string name="enroll_incomplete_message">We could not enroll you</string>
    <string name="enroll_done_message">Now you can verify with your Eyeprint</string>
    <string name="enroll_retry_message">You will have to retry enrollment.</string>
    <string name="main_enrollment_success">Enrolled</string>
    <string name="main_enrollment_failure">Not Enrolled</string>
    <string name="main_verify_success">Verified</string>
    <string name="main_verify_failure">Not Verified</string>
    <string name="main_recreate_button">Recreate Eyeprint</string>
    <string name="main_create_button">Create Eyeprint</string>
    <string name="enroll_heading">Enter a username to create a new Eyeprint or login with an existing username</string>
    <string name="username_hint">Username</string>
    <string name="enroll_button">Create an Eyeprint</string>
    <string name="verify_button">Login</string>
    <string name="register_button">Register</string>
    <string name="user_ok_button" translatable="false">Ok</string>
    <string name="user_cancel_button">Cancel</string>
    <string name="change_language">中文</string>
    <string name="settings_button" translatable="false">Settings</string>
    <string name="capture_scan_again_button">Keep Scanning</string>
    <string name="capture_cancel_button">Cancel</string>
    <string name="capture_continue_button">Continue</string>
    <string name="meena_button">Go to App</string>
    <string name="splash_copyright" translatable="false">Copyright &#169; 2015 EyeVerify. All rights reserved.</string>
    <string name="welcome_message">Welcome.\n\nOne look opens up mobile devices, logs you into apps, and secures your mobile payments.</string>
    <string name="welcome_continue_button">Get Started</string>
    <string name="instructions_heading">Press Start after reading the instructions below:</string>
    <string name="instructions_message_1">Move the device closer so your eyes fill the screen</string>
    <string name="instructions_message_2">Countdown will display during scan</string>
    <string name="instructions_message_3">Hold still and look into the camera</string>
    <string name="instructions_message_4">Repeat scans until Eyeprint is created</string>
    <string name="instructions_start_button">Start</string>
    <string name="capture_closed_incomplete_message">Incomplete process, you will have to retry.</string>
    <string name="eula_heading" translatable="false">EyeVerify EULA</string>
    <string name="eula_button" translatable="false">Accept</string>
</resources>